values/foundry/console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ /console/ticket/(.*) {
        proxy_pass https://$arg_vmhost/ticket/$1;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";
        proxy_request_buffering off;
        proxy_buffering off;
        proxy_read_timeout 86400s;
        proxy_send_timeout 86400s;
        proxy_ssl_session_reuse on;
      }
spec:
  rules:
  - host: $DOMAIN
    http:
      paths:
      - path: /console
        pathType: Prefix
        backend:
          service:
            name: topomojo-topomojo-api
            port:
              number: 80
  tls:
  - hosts:
    - $DOMAIN
    secretName: appliance-cert
